// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`availability cannot be 123 1`] = `
Object {
  "body": "{\\"errorMessage\\":\\"cannot be 123\\"}",
  "statusCode": 400,
}
`;

exports[`availability executes as expected 1`] = `
Object {
  "body": "{\\"foo\\":\\"bar\\",\\"propertyId\\":\\"1234\\"}",
  "statusCode": 200,
}
`;

exports[`availability is invalid 1`] = `
Object {
  "body": "{\\"errorMessage\\":\\"yup says no\\"}",
  "statusCode": 400,
}
`;
